<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/hjkl"
    tools:context=".Activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sign_in_to_wastemenot"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/error"
                android:textColor="#ff0000"
                android:layout_gravity="center"
                android:visibility="gone"

                android:textSize="20sp"/>

            <EditText

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/Email"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:hint="@string/email"
                android:inputType=""
                android:textSize="13sp"
                android:autofillHints="Email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/lock_24dp_fill0_wght400_grad0_opsz24"

                android:hint="@string/password"
                android:textSize="13sp"
                android:autofillHints="password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login"
                android:text="@string/login"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green"
                app:cornerRadius = "20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="8dp"
        android:text="@string/not_yet_registered_signup_now"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorLink="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/or_continue_with"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="101dp"
        android:layout_height="92dp"
        android:layout_marginStart="55dp"
        android:src="@drawable/google_removebg_preview" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="108dp"
        android:layout_height="64dp"
        android:layout_marginTop="-78dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/fac_removebg_preview" />


</LinearLayout>